# fastapi_PLAYGROUND

./: .dockerignore  Dockerfile  auth_b1.db  claude.md  dev.sh  main.py  pyproject.toml
.claude/: settings.local.json
auth_a1/: .env  main.py  user.db
auth_b1/: db.db  main.py
book_a1/: .env  __init__.py  api.py  auth.py  book.py  db.py  postgres.py  router.py
htmx_todo_a1/: main.py  sqlite.db
htmx_todo_a1/templates/: edit.html  index.html  task.html
learning/: api.py  book.py  db.json  json_db.py
migrations/: env.py
migrations/versions/: 2d409b079f6a_.py  2dabe55c375e_.py  5b29c0315366_fix_book_modul.py  6bb14a949625_rename_published_data_to_published_date.py  6f0909025c0a_.py  a8dde4eaf35a_fix_book_modul.py  c17704fbba9b_initial_tables.py
shipping_a1/: .env  api.py  db.py  main.py  seller.py  ship.py  tests.py
sqlite/: db.py  s3.db
todo_a1/: auth.py  db.py  main.py  todo.py
