[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic[standard]>=1.18.3",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.4",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.32",
]
